Fixed documentlist spacing even without categories

--- a/src/scss/components/DocumentList.scss
+++ b/src/scss/components/DocumentList.scss
@@ -1,6 +1,9 @@
 .DocumentList {
 
   .document-category {
+    .TitleSubTitleListing {
+      margin-left: 0.75rem;
+    }
     .document-category-name {
       margin: 0;
       text-decoration: underline;
