--- a/src/scss/components/TitleSubTitleListing.scss
+++ b/src/scss/components/TitleSubTitleListing.scss
@@ -1,5 +1,4 @@
 .TitleSubTitleListing {
-  margin-left: 1.2rem;
 
   a {
     text-decoration: none;
